--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,25 @@
-
-# SEO
 title: Athena Jekyll Theme
 description: A simple and elegant theme for Jekyll and GitHub Pages.
-
-# social
-social_link: twitter
-social_username: broccolini
-github_repo: athena # the GitHub repo name for your project
-github_username: broccolini
+social_link: ''
+social_username: ''
+github_repo: ''
+github_username: ''
 theme_color: light
-
-# Theme
-remote_theme: 'internet-de-france/athena'
-baseurl: '/vantrav'
-
-# Defaults
-
+remote_theme: internet-de-france/athena
+baseurl: /vantrav
 defaults:
-  -
-    scope:
-      path: ""
-      type: "pages"
+  - scope:
+      path: ''
+      type: pages
     values:
-      category_name: ""
-  -
-    scope:
-      path: ""
-      type: "posts"
+      category_name: ''
+  - scope:
+      path: ''
+      type: posts
     values:
-      categories: ""
-
-# Stastic UI
-remote_theme_layouts: 
-  - ""
+      categories: ''
+remote_theme_layouts:
+  - ''
   - default
   - page
   - post
@@ -43,7 +30,6 @@ social_links:
   - instagram
   - medium
   - dribbble
-
 theme_colors:
   - light
   - black
@@ -54,5 +40,3 @@ theme_colors:
   - red
   - white
   - yellow
-
-
