--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Athena Jekyll Theme
-description: A simple and elegant theme for Jekyll and GitHub Pages.
+title: Vantrav
+description: My musings
 social_link: ''
 social_username: ''
 github_repo: ''
