--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Vantrav
 description: My musings
 social_link: ''
 social_username: ''
-github_repo: ''
-github_username: ''
+github_repo: vartrav
+github_username: vartrav
 theme_color: light
 remote_theme: internet-de-france/athena
 baseurl: /vantrav
