--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ social_link: ''
 social_username: ''
 github_repo: vartrav
 github_username: vartrav
-theme_color: light
+theme_color: blue
 remote_theme: internet-de-france/athena
 baseurl: /vantrav
 defaults:
